--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <script src="js/scripts.js" defer></script>
+    <link rel="stylesheet" href="css/style.css">
+  </head>
+  <body>
+    <h1>Welcome to the pig-game</h1>
+
+    <p>
+      a player repeatedly rolls a die until either a 1 is rolled or the player
+      decides to "hold": If the player rolls a 1, they score nothing and it
+      becomes the next player's turn. If the player rolls any other number, it
+      is added to their turn total and the player's turn continues. If a player
+      chooses to "hold", their turn total is added to their score, and it
+      becomes the next player's turn. The first player to score 100 or more
+      points wins.
+    </p>
+
+    <form id="formEl">
+      <input type="text" placeholder="Enter your name"/>
+      <button id="btn">Submit</button>
+    </form>
+
+  
+
+    <button id="hold">Hold</button>
+    <button id="throw">Throw the dice!</button>
+    <button id="restart">Restart game</button>
+
+    <p id="p1"></p>
+    <p></p>
+    <p></p>
+  </body>
 </html>
