--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <div class="div1">
     <h1>Welcome to the pig-game</h1>
     <p>
       a player repeatedly rolls a die until either a 1 is rolled or the player
@@ -19,7 +20,7 @@
       points wins.
     </p>
 
-    <div id="gamePlace">
+    <div class="gamePlace">
       <form id="formEl">
         <input type="text" placeholder="Enter your name" required />
         <button id="btn">Submit</button>
@@ -36,5 +37,6 @@
       <p></p>
       <p></p>
     </div>
+  </div>
   </body>
 </html>
